13. Add ESLint and fixing code with linter

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node node_modules/jest/bin/jest",
+    "linter": "node node_modules/eslint/bin/eslint .",
+    "linter-fix": "node node_modules/eslint/bin/eslint . --fix",
     "start": "node index.js"
   },
   "repository": {
@@ -20,5 +22,8 @@
   "homepage": "https://github.com/paulinaOM/fizzbuz#readme",
   "dependencies": {
     "jest": "^26.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0"
   }
 }
