--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/paulinaOM/fizzbuz#readme",
   "dependencies": {
+    "express": "^4.18.0",
     "jest": "^26.0.0"
   },
   "devDependencies": {
