--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/paulinaOM/fizzbuz#readme",
   "dependencies": {
     "express": "^4.18.0",
-    "jest": "^26.0.0"
+    "jest": "^26.0.0",
+    "supertest": "^6.2.3"
   },
   "devDependencies": {
     "eslint": "^8.14.0"
